--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NSS DAY</title>
-    <style>
-      *{
-        color: white;
-        padding: 0px;
-        margin: 0px;
-        font-family: cursive;
-      }
-      input{
-        color: black;
-      }
-    </style>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webcam Capture</title>
+    <link rel="stylesheet" href="style/index.css">
+</head>
+<body>
     <div id="root"></div>
-    <script type="module" src="../src/index.jsx"></script>
-  </body>
+    <script src="dist/bundle.js"></script>
+    <script src="index.jsx"></script>
+</body>
 </html>
