--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webcam Capture</title>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="/src/style/index.css">
 </head>
 <body>
     <div id="root"></div>
-    <script src="dist/bundle.js"></script>
-    <script src="index.jsx"></script>
+    <script src="/src/index.jsx"></script>
 </body>
 </html>
